# metbit

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  MANIFEST.in  README.md  README.rst  coverage.json  docker-test.sh  package-lock.json  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  utility.py
.github/: dependabot.yml
.leankg/: leankg.yaml
Benchmark/: README.md  build_validation_report.py  metrics.py  validation_report.html
docs/: README.md  eslint.config.mjs  impact-analysis.md  mdx-components.tsx  next.config.js  package-lock.json  package.json  test-matrix.md  tsconfig.json  tsconfig.tsbuildinfo
manuscript/: convert_to_docx.py  incob2026_manuscript.bib  incob2026_manuscript.md  metbit_manuscript.docx  metbit_manuscript.md  ~$tbit_manuscript.docx
metbit/: STOCSY.py  __init__.py  _compat.py  _native.py  _native_backend.c  annotate_peak.py  base.py  baseline.py  boxplot.py  calibrate.py  cross_validation.py  denoise_spec.py  dev.py  dynamic-STOCSY.py  dynamic_STOCSY.py  ellipse.py  genpage.py  lazy_opls_da.py  metbit.py  metopls.py  nmr_preprocess.py  opls.py  pca_ellipse.py  pca_u.py  peak_processe.py  plotting.py  pls.py  pretreatment.py  scaler.py  spec_norm.py  take_intensity.py  test.ipynb  ui_picky_peak.py  ui_stocsy.py  utility.py  vip.py
metbit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_latex.py  generate_test_summary.py  gpu_benchmark.py  hpc_benchmark.sh  hpc_benchmark.slurm  make_transparency_report.py  (+4 more)
(+663 files in other folders)
