[metadata]
description_file = README.rst
# Prevent setuptools from auto-injecting License-File into wheel METADATA.
# Newer setuptools adds License-File when it finds a LICENSE file but keeps
# Metadata-Version: 2.1 (the legacy setup.py path), which causes twine to
# reject the wheel with "unrecognized or malformed field 'license-file'".
license_files =

[options.extras_require]
ml =
    xgboost>=1.7,<3; python_version < "3.14"
dl =
    torch>=2.0
all =
    xgboost>=1.7,<3; python_version < "3.14"
    torch>=2.0
